# riichi_mahjong_rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.ja.md  README.md  fly.toml  index.html  vercel.json
crates/mahjong-client/: Cargo.toml  glyphs.txt
crates/mahjong-client/js/: storage.js  ws.js
crates/mahjong-client/src/: adapter.rs  game.rs  main.rs  persistence.rs  renderer.rs  transport.rs  wasm_rng.rs
crates/mahjong-client/src/adapter/: local.rs  mod.rs  remote.rs
crates/mahjong-client/src/i18n/: mod.rs
crates/mahjong-client/src/renderer/: mod.rs  online.rs  overlay.rs  theme.rs
crates/mahjong-core/: Cargo.toml
crates/mahjong-core/src/: _main.rs  hand.rs  hand_info.rs  lib.rs  scoring.rs  settings.rs  tile.rs  winning_hand.rs
crates/mahjong-core/src/hand_info/: block.rs  hand_analyzer.rs  meld.rs  opened.rs  status.rs
crates/mahjong-core/src/scoring/: fu.rs  score.rs
crates/mahjong-core/src/winning_hand/: check_1_han.rs  check_2_han.rs  check_3_han.rs  check_5_han.rs  check_6_han.rs  check_yakuman.rs  (+2 more)
crates/mahjong-net-server/: Cargo.toml
crates/mahjong-net-server/src/: connection.rs  lib.rs  lobby.rs  main.rs  ratelimit.rs  room.rs
crates/mahjong-net-server/tests/: integration.rs
crates/mahjong-server/: Cargo.toml
crates/mahjong-server/examples/: cpu_simulation.rs
crates/mahjong-server/src/: action.rs  driver.rs  lib.rs  player.rs  protocol.rs  round.rs  scoring.rs  simulation.rs  table.rs  wall.rs
docs/: .markdownlint.jsonc  README.ja.md  glossary.ja.md  glossary.md
public/: index.html
scripts/: extract_glyphs.py  vercel-build.sh  vercel-install.sh
src/: hand.rs  settings.rs
src/hand_info/: hand_analyzer.rs  status.rs
src/winning_hand/: check_1_han.rs  check_2_han.rs  check_3_han.rs  check_5_han.rs  check_6_han.rs  check_yakuman.rs  checker.rs  name.rs
(+15 files in other folders)
