[package]
name = "mahjong-net-server"
version = "0.1.0"
authors = ["hi_go <me@clutte.red>"]
edition = "2024"

[dependencies]
mahjong-server = { path = "../mahjong-server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = "0.27"
